# hyphalbase

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  .toak-ignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  secrets.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
.github/workflows/: main.yml
crates/embeddings-server/: Cargo.toml
crates/embeddings-server/src/: main.rs
scripts/: cleanup.sh  seed.ts  test_delete_all.js  test_delete_record.js  test_get.js  test_put.js  test_put_with_id.js
src/: hyphal_object.ts  index.ts
test/: integration.test.ts
