[package]
name = "embeddings-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
openai_api_rust = "0.1.9"
serde_json = "1.0.140"
fastembed = "4"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
